# Easyplot

./: .gitignore  CMakeLists.txt  README.md  Source1.cpp  easy_plot.hpp  easy_plot.hpp.1741617503.bak  main.cpp
main/: easy_plot_draw.hpp  easy_plot_line_spec.hpp  easy_plot_window_spec.hpp
test/: easy_plot_test.hpp
utility/: easy_plot_screenshot.hpp
